# wiblue-app

./: README.md  package.json
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  passwd-file
src-tauri/src/: lib.rs  main.rs
src-tauri/src/wlan/: connect_network.rs  get_interfaces.rs  get_networks.rs  manager.rs  mod.rs  network_data.rs  network_stats.rs  networkmanager_error.rs
src/Olf/: olf.ts
src/components/Navbar/: NavbarUserInfo.tsx
src/components/NavbarModel/: NavbarModel.tsx
src/components/NetworkEntry/: NetworkEntry.tsx  styles.module.scss
src/components/NetworkTable/: NetworksTable.tsx  styles.module.scss
src/components/SeenNetworkEntry/: SeenNetworkEntry.tsx  styles.module.scss
src/components/SeenNetworkTable/: SeenNetworkTable.tsx  styles.module.scss
src/constants/: apilinks.ts
src/contexts/: userContextProvider.tsx
src/pages/account/: Account.tsx  styles.module.scss
src/pages/login/: Login.tsx
src/pages/networks/: Networks.tsx
src/pages/register/: Register.tsx  styles.module.scss
src/pages/settings/: Settings.tsx
src/pages/stats/: Stats.tsx  styles.module.scss
src/types/: network.ts  user.ts
