[package]
name = "wiblue"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wiblue_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.11.1"
strum = "0.26.3"
strum_macros = "0.26.4"
serde_with = "3.8.1"

pnet = "0.31.0"
reqwest = { version = "0.11.18", features = ["json"] }
tokio = { version = "1.32.0", features = ["full"] }
pnet_datalink = "0.35.0"

systemstat = "0.2.4"
surge-ping = "0.8.0"
rand = "0.8.5"


trust-dns-resolver = "0.23.0"                       # Alternative to std::net for more DNS features
chrono = "0.4.31"                                   # For timestamps
clap = { version = "4.4.6", features = ["derive"] } # For CLI parsing
